--- a/next-dashboard/app/globals.css
+++ b/next-dashboard/app/globals.css
@@ -19,3 +19,9 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+a{
+  color:inherit;
+  text-decoration: none;
+  
+}
